--- a/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
+++ b/src/app/ModuloUsuario/pg-dashcodigosofertas/pg-dashcodigosofertas.component.html
@@ -17,7 +17,6 @@
         <td>{{ item.negocio }}</td>
         <td>{{ item.descripcion }}</td>
         <td>{{ item.fecha_fin | date:'yyyy-MM-dd' }}</td>
-
         <td>
           <span [ngClass]="{
             'bg-warning': item.estado === 'EXPIRADO',
@@ -26,7 +25,7 @@
           }">{{ item.estado }}</span>
         </td>
         <td>
-          <button type="button" class="btn btn-link" (click)="openModal(item)">
+          <button *ngIf="item.estado !== 'VALIDADO'" type="button" class="btn btn-link" (click)="openModal(item)">
             <i class="pi pi-eye"></i>
           </button>
         </td>
